Resolved checkbox issue on iphone

--- a/src/app/play/predict/predict.component.css
+++ b/src/app/play/predict/predict.component.css
@@ -30,4 +30,7 @@ ul li{
     width: 300px;
     margin-left: -39px;
   }
+  .divDisable{
+    margin-top: 10% !important;
+  }
 }
